fix blank space issue on mobile

--- a/src/css/Landing.css
+++ b/src/css/Landing.css
@@ -23,50 +23,6 @@
   max-width: 10vw;
   /* margin: auto; */
 }
-@media (max-width: 450px) {
-  .btn {
-    min-width: 20vw;
-    max-width: unset;
-  }
-  .butt {
-    max-width: 75vw;
-    /* padding-top: 2.5vh; */
-  }
-  .desc-text {
-    font-size: 0.9em;
-  }
-  #title {
-    font-size: 2.5em;
-    margin-top: -3vh;
-  }
-  #desc {
-    margin-top: -20vh;
-  }
-}
-
-/* .App-logo {
-  height: 40vmin;
-  pointer-events: none;
-} */
-
-/* @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  } 
-} */
-
-.header {
-  /* background-color: #282c34; */
-  background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
-  min-height: 100vh;
-  display: flex;
-  /* flex-direction: column; */
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-  padding: 0 10vw 0 10vw;
-}
 
 .scroll {
   /* background: red; */
@@ -94,6 +50,62 @@
   -webkit-animation: sdb05 1.5s infinite;
   animation: sdb05 1.5s infinite;
   box-sizing: border-box;
+}
+
+#git {
+  border-color: white;
+}
+
+#git:hover {
+  background-color: rgba(0,0,0,0.5);
+}
+
+@media (max-width: 450px) {
+  .btn {
+    min-width: 20vw;
+    max-width: unset;
+  }
+  .butt {
+    max-width: 75vw;
+    /* padding-top: 2.5vh; */
+  }
+  .desc-text {
+    font-size: 0.9em;
+  }
+  #title {
+    font-size: 2.5em;
+    margin-top: -3vh;
+  }
+  #desc {
+    margin-top: -25vh;
+  }
+  .scroll {
+    margin-bottom : 150px;
+  }
+}
+
+/* .App-logo {
+  height: 40vmin;
+  pointer-events: none;
+} */
+
+/* @media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  } 
+} */
+
+.header {
+  /* background-color: #282c34; */
+  background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
+  min-height: 100vh;
+  display: flex;
+  /* flex-direction: column; */
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+  padding: 0 10vw 0 10vw;
 }
 
 @-webkit-keyframes sdb05 {
